--- a/IOD_Lab-10_2.ipynb
+++ b/IOD_Lab-10_2.ipynb
@@ -79,6 +79,98 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting regex\n",
+      "  Downloading regex-2023.6.3-cp38-cp38-win_amd64.whl (268 kB)\n",
+      "Installing collected packages: regex\n",
+      "Successfully installed regex-2023.6.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install regex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting spacy\n",
+      "  Downloading spacy-3.6.0-cp38-cp38-win_amd64.whl (12.7 MB)\n",
+      "Collecting srsly<3.0.0,>=2.4.3\n",
+      "  Downloading srsly-2.4.7-cp38-cp38-win_amd64.whl (483 kB)\n",
+      "Collecting preshed<3.1.0,>=3.0.2\n",
+      "  Downloading preshed-3.0.8-cp38-cp38-win_amd64.whl (96 kB)\n",
+      "Collecting murmurhash<1.1.0,>=0.28.0\n",
+      "  Downloading murmurhash-1.0.9-cp38-cp38-win_amd64.whl (18 kB)\n",
+      "Collecting typer<0.10.0,>=0.3.0\n",
+      "  Using cached typer-0.9.0-py3-none-any.whl (45 kB)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy) (58.0.4)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy) (4.63.0)\n",
+      "Collecting pathy>=0.10.0\n",
+      "  Using cached pathy-0.10.2-py3-none-any.whl (48 kB)\n",
+      "Requirement already satisfied: numpy>=1.15.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy) (1.21.3)\n",
+      "Collecting thinc<8.2.0,>=8.1.8\n",
+      "  Downloading thinc-8.1.10-cp38-cp38-win_amd64.whl (1.5 MB)\n",
+      "Collecting cymem<2.1.0,>=2.0.2\n",
+      "  Downloading cymem-2.0.7-cp38-cp38-win_amd64.whl (30 kB)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy) (21.0)\n",
+      "Collecting smart-open<7.0.0,>=5.2.1\n",
+      "  Using cached smart_open-6.3.0-py3-none-any.whl (56 kB)\n",
+      "Collecting langcodes<4.0.0,>=3.2.0\n",
+      "  Using cached langcodes-3.3.0-py3-none-any.whl (181 kB)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy) (3.0.2)\n",
+      "Collecting spacy-loggers<2.0.0,>=1.0.0\n",
+      "  Using cached spacy_loggers-1.0.4-py3-none-any.whl (11 kB)\n",
+      "Collecting catalogue<2.1.0,>=2.0.6\n",
+      "  Using cached catalogue-2.0.9-py3-none-any.whl (17 kB)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy) (2.26.0)\n",
+      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<1.11.0,>=1.7.4 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy) (1.9.0)\n",
+      "Collecting wasabi<1.2.0,>=0.9.1\n",
+      "  Using cached wasabi-1.1.2-py3-none-any.whl (27 kB)\n",
+      "Collecting spacy-legacy<3.1.0,>=3.0.11\n",
+      "  Using cached spacy_legacy-3.0.12-py2.py3-none-any.whl (29 kB)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from packaging>=20.0->spacy) (3.0.4)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from pydantic!=1.8,!=1.8.1,<1.11.0,>=1.7.4->spacy) (4.1.1)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (2.0.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (2022.12.7)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (3.1)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (1.26.7)\n",
+      "Collecting confection<1.0.0,>=0.0.1\n",
+      "  Using cached confection-0.1.0-py3-none-any.whl (34 kB)\n",
+      "Collecting blis<0.8.0,>=0.7.8\n",
+      "  Downloading blis-0.7.10-cp38-cp38-win_amd64.whl (7.4 MB)\n",
+      "Requirement already satisfied: colorama in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from tqdm<5.0.0,>=4.38.0->spacy) (0.4.4)\n",
+      "Requirement already satisfied: click<9.0.0,>=7.1.1 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from typer<0.10.0,>=0.3.0->spacy) (7.1.2)\n",
+      "Collecting colorama\n",
+      "  Using cached colorama-0.4.6-py2.py3-none-any.whl (25 kB)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from jinja2->spacy) (2.0.1)\n",
+      "Installing collected packages: catalogue, srsly, murmurhash, cymem, colorama, wasabi, typer, smart-open, preshed, confection, blis, thinc, spacy-loggers, spacy-legacy, pathy, langcodes, spacy\n",
+      "  Attempting uninstall: colorama\n",
+      "    Found existing installation: colorama 0.4.4\n",
+      "    Uninstalling colorama-0.4.4:\n",
+      "      Successfully uninstalled colorama-0.4.4\n",
+      "Successfully installed blis-0.7.10 catalogue-2.0.9 colorama-0.4.6 confection-0.1.0 cymem-2.0.7 langcodes-3.3.0 murmurhash-1.0.9 pathy-0.10.2 preshed-3.0.8 smart-open-6.3.0 spacy-3.6.0 spacy-legacy-3.0.12 spacy-loggers-1.0.4 srsly-2.4.7 thinc-8.1.10 typer-0.9.0 wasabi-1.1.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install spacy"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "id": "tg7rmSxKiA3q"
