--- a/IOD_Lab-10_2.ipynb
+++ b/IOD_Lab-10_2.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "tg7rmSxKiA3q"
    },
@@ -202,34 +202,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "N4qDXS4ViA3s"
    },
    "outputs": [],
    "source": [
     "# Read in the data\n",
-    "df = pd.read_csv('../../data/sentiments.csv')"
+    "df = pd.read_csv(r\"C:\\Users\\isabe\\Documents\\IOD Teaching\\TeachingData\\IOD_Data\\sentiments.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "M3kt9qOPiA3u"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "apuPECrQiA3v"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>sentiment</th>\n",
+       "      <th>source</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Wow... Loved this place.</td>\n",
+       "      <td>1</td>\n",
+       "      <td>yelp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Crust is not good.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>yelp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Not tasty and the texture was just nasty.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>yelp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Stopped by during the late May bank holiday of...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>yelp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The selection on the menu was great and so wer...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>yelp</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text  sentiment source\n",
+       "0                           Wow... Loved this place.          1   yelp\n",
+       "1                                 Crust is not good.          0   yelp\n",
+       "2          Not tasty and the texture was just nasty.          0   yelp\n",
+       "3  Stopped by during the late May bank holiday of...          1   yelp\n",
+       "4  The selection on the menu was great and so wer...          1   yelp"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
@@ -245,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "aQ0Ja-mLiA3w"
    },
@@ -262,13 +348,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "jHqvXHWgiA3x"
    },
    "outputs": [],
    "source": [
     "df['text'] = df['text'].apply(clean_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0.tar.gz\n",
+      "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0.tar.gz (12.8 MB)\n",
+      "Requirement already satisfied: spacy<3.7.0,>=3.6.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from en-core-web-sm==3.6.0) (3.6.0)\n",
+      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (1.0.9)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (4.63.0)\n",
+      "Requirement already satisfied: wasabi<1.2.0,>=0.9.1 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (1.1.2)\n",
+      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<1.11.0,>=1.7.4 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (1.9.0)\n",
+      "Requirement already satisfied: langcodes<4.0.0,>=3.2.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (3.3.0)\n",
+      "Requirement already satisfied: srsly<3.0.0,>=2.4.3 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (2.4.7)\n",
+      "Requirement already satisfied: thinc<8.2.0,>=8.1.8 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (8.1.10)\n",
+      "Requirement already satisfied: typer<0.10.0,>=0.3.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (0.9.0)\n",
+      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (3.0.8)\n",
+      "Requirement already satisfied: numpy>=1.15.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (1.21.3)\n",
+      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (3.0.12)\n",
+      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (1.0.4)\n",
+      "Requirement already satisfied: smart-open<7.0.0,>=5.2.1 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (6.3.0)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (58.0.4)\n",
+      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (2.0.7)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (21.0)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (3.0.2)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (2.26.0)\n",
+      "Requirement already satisfied: pathy>=0.10.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (0.10.2)\n",
+      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (2.0.9)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from packaging>=20.0->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (3.0.4)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from pydantic!=1.8,!=1.8.1,<1.11.0,>=1.7.4->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (4.1.1)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (2.0.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (3.1)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (1.26.7)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (2022.12.7)\n",
+      "Requirement already satisfied: confection<1.0.0,>=0.0.1 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from thinc<8.2.0,>=8.1.8->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (0.1.0)\n",
+      "Requirement already satisfied: blis<0.8.0,>=0.7.8 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from thinc<8.2.0,>=8.1.8->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (0.7.10)\n",
+      "Requirement already satisfied: colorama in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from tqdm<5.0.0,>=4.38.0->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (0.4.6)\n",
+      "Requirement already satisfied: click<9.0.0,>=7.1.1 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from typer<0.10.0,>=0.3.0->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (7.1.2)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from jinja2->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (2.0.1)\n",
+      "Building wheels for collected packages: en-core-web-sm\n",
+      "  Building wheel for en-core-web-sm (setup.py): started\n",
+      "  Building wheel for en-core-web-sm (setup.py): finished with status 'done'\n",
+      "  Created wheel for en-core-web-sm: filename=en_core_web_sm-3.6.0-py3-none-any.whl size=12803331 sha256=a4f18c58a1b5247941c73c2611fe80a67fe3e29c889baa624e3e920a178967f5\n",
+      "  Stored in directory: c:\\users\\isabe\\appdata\\local\\pip\\cache\\wheels\\60\\48\\89\\f52d003516f5405700a0e61455b357d8dbd1c53e7822f436cb\n",
+      "Successfully built en-core-web-sm\n",
+      "Installing collected packages: en-core-web-sm\n",
+      "Successfully installed en-core-web-sm-3.6.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0.tar.gz"
    ]
   },
   {
@@ -282,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "8jkuC41ziA3y"
    },
@@ -294,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "id": "eJaHoVMYiA3z"
    },
