--- a/IOD_Lab-10_2.ipynb
+++ b/IOD_Lab-10_2.ipynb
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "O4opW1Y3iA30"
    },
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "g8EvPFkRiA30"
    },
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "prT7_T2KiA31"
    },
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "8eTqMYSviA32"
    },
@@ -509,11 +509,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "id": "LvV4qb4hiA32"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7733\n"
+     ]
+    }
+   ],
    "source": [
     "# create a matrix of word counts from the text\n",
     "# use TF-IDF\n",
@@ -555,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "xE00p38EiA33"
    },
@@ -584,11 +592,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "id": "pm7D9sXaiA34"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('preprocessor', preprocessor()),\n",
+       "                ('tfidfvectorizer', TfidfVectorizer()),\n",
+       "                ('linearsvc', LinearSVC())])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pipe = make_pipeline(preprocessor(), tfidf, classifier)\n",
     "pipe.fit(df['text'],df['sentiment'])"
@@ -650,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "id": "XM_C4W5aiA36"
    },
@@ -661,11 +682,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "id": "SwxzGKyPiA37"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sklearn.pipeline.Pipeline"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(newpipe)"
    ]
@@ -681,11 +713,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "id": "a8gsYyapiA37"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "print(newpipe.predict(pd.Series('awesome place'))[0])\n",
     "print(newpipe.predict(pd.Series('terrible!'))[0])\n",
