Commit as per session

--- a/IOD_Lab-10_2.ipynb
+++ b/IOD_Lab-10_2.ipynb
@@ -81,97 +81,23 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting regex\n",
-      "  Downloading regex-2023.6.3-cp38-cp38-win_amd64.whl (268 kB)\n",
-      "Installing collected packages: regex\n",
-      "Successfully installed regex-2023.6.3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install regex"
+    "#!pip install regex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install spacy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting spacy\n",
-      "  Downloading spacy-3.6.0-cp38-cp38-win_amd64.whl (12.7 MB)\n",
-      "Collecting srsly<3.0.0,>=2.4.3\n",
-      "  Downloading srsly-2.4.7-cp38-cp38-win_amd64.whl (483 kB)\n",
-      "Collecting preshed<3.1.0,>=3.0.2\n",
-      "  Downloading preshed-3.0.8-cp38-cp38-win_amd64.whl (96 kB)\n",
-      "Collecting murmurhash<1.1.0,>=0.28.0\n",
-      "  Downloading murmurhash-1.0.9-cp38-cp38-win_amd64.whl (18 kB)\n",
-      "Collecting typer<0.10.0,>=0.3.0\n",
-      "  Using cached typer-0.9.0-py3-none-any.whl (45 kB)\n",
-      "Requirement already satisfied: setuptools in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy) (58.0.4)\n",
-      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy) (4.63.0)\n",
-      "Collecting pathy>=0.10.0\n",
-      "  Using cached pathy-0.10.2-py3-none-any.whl (48 kB)\n",
-      "Requirement already satisfied: numpy>=1.15.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy) (1.21.3)\n",
-      "Collecting thinc<8.2.0,>=8.1.8\n",
-      "  Downloading thinc-8.1.10-cp38-cp38-win_amd64.whl (1.5 MB)\n",
-      "Collecting cymem<2.1.0,>=2.0.2\n",
-      "  Downloading cymem-2.0.7-cp38-cp38-win_amd64.whl (30 kB)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy) (21.0)\n",
-      "Collecting smart-open<7.0.0,>=5.2.1\n",
-      "  Using cached smart_open-6.3.0-py3-none-any.whl (56 kB)\n",
-      "Collecting langcodes<4.0.0,>=3.2.0\n",
-      "  Using cached langcodes-3.3.0-py3-none-any.whl (181 kB)\n",
-      "Requirement already satisfied: jinja2 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy) (3.0.2)\n",
-      "Collecting spacy-loggers<2.0.0,>=1.0.0\n",
-      "  Using cached spacy_loggers-1.0.4-py3-none-any.whl (11 kB)\n",
-      "Collecting catalogue<2.1.0,>=2.0.6\n",
-      "  Using cached catalogue-2.0.9-py3-none-any.whl (17 kB)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy) (2.26.0)\n",
-      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<1.11.0,>=1.7.4 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy) (1.9.0)\n",
-      "Collecting wasabi<1.2.0,>=0.9.1\n",
-      "  Using cached wasabi-1.1.2-py3-none-any.whl (27 kB)\n",
-      "Collecting spacy-legacy<3.1.0,>=3.0.11\n",
-      "  Using cached spacy_legacy-3.0.12-py2.py3-none-any.whl (29 kB)\n",
-      "Requirement already satisfied: pyparsing>=2.0.2 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from packaging>=20.0->spacy) (3.0.4)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from pydantic!=1.8,!=1.8.1,<1.11.0,>=1.7.4->spacy) (4.1.1)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (2.0.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (2022.12.7)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (3.1)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy) (1.26.7)\n",
-      "Collecting confection<1.0.0,>=0.0.1\n",
-      "  Using cached confection-0.1.0-py3-none-any.whl (34 kB)\n",
-      "Collecting blis<0.8.0,>=0.7.8\n",
-      "  Downloading blis-0.7.10-cp38-cp38-win_amd64.whl (7.4 MB)\n",
-      "Requirement already satisfied: colorama in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from tqdm<5.0.0,>=4.38.0->spacy) (0.4.4)\n",
-      "Requirement already satisfied: click<9.0.0,>=7.1.1 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from typer<0.10.0,>=0.3.0->spacy) (7.1.2)\n",
-      "Collecting colorama\n",
-      "  Using cached colorama-0.4.6-py2.py3-none-any.whl (25 kB)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from jinja2->spacy) (2.0.1)\n",
-      "Installing collected packages: catalogue, srsly, murmurhash, cymem, colorama, wasabi, typer, smart-open, preshed, confection, blis, thinc, spacy-loggers, spacy-legacy, pathy, langcodes, spacy\n",
-      "  Attempting uninstall: colorama\n",
-      "    Found existing installation: colorama 0.4.4\n",
-      "    Uninstalling colorama-0.4.4:\n",
-      "      Successfully uninstalled colorama-0.4.4\n",
-      "Successfully installed blis-0.7.10 catalogue-2.0.9 colorama-0.4.6 confection-0.1.0 cymem-2.0.7 langcodes-3.3.0 murmurhash-1.0.9 pathy-0.10.2 preshed-3.0.8 smart-open-6.3.0 spacy-3.6.0 spacy-legacy-3.0.12 spacy-loggers-1.0.4 srsly-2.4.7 thinc-8.1.10 typer-0.9.0 wasabi-1.1.2\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install spacy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {
     "id": "tg7rmSxKiA3q"
    },
@@ -202,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "id": "N4qDXS4ViA3s"
    },
@@ -214,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "id": "M3kt9qOPiA3u"
    },
@@ -225,7 +151,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "id": "apuPECrQiA3v"
    },
@@ -311,7 +237,7 @@
        "4  The selection on the menu was great and so wer...          1   yelp"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "id": "aQ0Ja-mLiA3w"
    },
@@ -348,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "id": "jHqvXHWgiA3x"
    },
@@ -359,60 +285,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0.tar.gz\n",
-      "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0.tar.gz (12.8 MB)\n",
-      "Requirement already satisfied: spacy<3.7.0,>=3.6.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from en-core-web-sm==3.6.0) (3.6.0)\n",
-      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (1.0.9)\n",
-      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (4.63.0)\n",
-      "Requirement already satisfied: wasabi<1.2.0,>=0.9.1 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (1.1.2)\n",
-      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<1.11.0,>=1.7.4 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (1.9.0)\n",
-      "Requirement already satisfied: langcodes<4.0.0,>=3.2.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (3.3.0)\n",
-      "Requirement already satisfied: srsly<3.0.0,>=2.4.3 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (2.4.7)\n",
-      "Requirement already satisfied: thinc<8.2.0,>=8.1.8 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (8.1.10)\n",
-      "Requirement already satisfied: typer<0.10.0,>=0.3.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (0.9.0)\n",
-      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (3.0.8)\n",
-      "Requirement already satisfied: numpy>=1.15.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (1.21.3)\n",
-      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (3.0.12)\n",
-      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (1.0.4)\n",
-      "Requirement already satisfied: smart-open<7.0.0,>=5.2.1 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (6.3.0)\n",
-      "Requirement already satisfied: setuptools in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (58.0.4)\n",
-      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (2.0.7)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (21.0)\n",
-      "Requirement already satisfied: jinja2 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (3.0.2)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (2.26.0)\n",
-      "Requirement already satisfied: pathy>=0.10.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (0.10.2)\n",
-      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (2.0.9)\n",
-      "Requirement already satisfied: pyparsing>=2.0.2 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from packaging>=20.0->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (3.0.4)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from pydantic!=1.8,!=1.8.1,<1.11.0,>=1.7.4->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (4.1.1)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (2.0.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (3.1)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (1.26.7)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (2022.12.7)\n",
-      "Requirement already satisfied: confection<1.0.0,>=0.0.1 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from thinc<8.2.0,>=8.1.8->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (0.1.0)\n",
-      "Requirement already satisfied: blis<0.8.0,>=0.7.8 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from thinc<8.2.0,>=8.1.8->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (0.7.10)\n",
-      "Requirement already satisfied: colorama in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from tqdm<5.0.0,>=4.38.0->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (0.4.6)\n",
-      "Requirement already satisfied: click<9.0.0,>=7.1.1 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from typer<0.10.0,>=0.3.0->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (7.1.2)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\isabe\\anaconda3_1\\envs\\iod\\lib\\site-packages (from jinja2->spacy<3.7.0,>=3.6.0->en-core-web-sm==3.6.0) (2.0.1)\n",
-      "Building wheels for collected packages: en-core-web-sm\n",
-      "  Building wheel for en-core-web-sm (setup.py): started\n",
-      "  Building wheel for en-core-web-sm (setup.py): finished with status 'done'\n",
-      "  Created wheel for en-core-web-sm: filename=en_core_web_sm-3.6.0-py3-none-any.whl size=12803331 sha256=a4f18c58a1b5247941c73c2611fe80a67fe3e29c889baa624e3e920a178967f5\n",
-      "  Stored in directory: c:\\users\\isabe\\appdata\\local\\pip\\cache\\wheels\\60\\48\\89\\f52d003516f5405700a0e61455b357d8dbd1c53e7822f436cb\n",
-      "Successfully built en-core-web-sm\n",
-      "Installing collected packages: en-core-web-sm\n",
-      "Successfully installed en-core-web-sm-3.6.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0.tar.gz"
+    "#!pip install https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0.tar.gz"
    ]
   },
   {
@@ -426,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "id": "8jkuC41ziA3y"
    },
@@ -438,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "id": "eJaHoVMYiA3z"
    },
@@ -462,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "id": "O4opW1Y3iA30"
    },
@@ -473,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "id": "g8EvPFkRiA30"
    },
@@ -486,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "id": "prT7_T2KiA31"
    },
@@ -498,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "id": "8eTqMYSviA32"
    },
@@ -509,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {
     "id": "LvV4qb4hiA32"
    },
@@ -563,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {
     "id": "xE00p38EiA33"
    },
@@ -592,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {
     "id": "pm7D9sXaiA34"
    },
@@ -605,7 +482,7 @@
        "                ('linearsvc', LinearSVC())])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,21 +503,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "eL4XgPydiA34"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipe.predict(pd.Series(\"This lab was fantastic!\"))[0]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "id": "wwMHti5yiA35"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipe.predict(pd.Series(\"This lab was horrible!\"))[0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -671,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "id": "XM_C4W5aiA36"
    },
@@ -682,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "id": "SwxzGKyPiA37"
    },
@@ -693,7 +596,7 @@
        "sklearn.pipeline.Pipeline"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "id": "a8gsYyapiA37"
    },
@@ -846,22 +749,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "id": "vopDOT2UiA4B"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.0.1'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "joblib.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "id": "iuIh-3bziA4C"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3.6.0'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "en_core_web_sm.__version__"
    ]
